Replace short tasks with 10 student variants

--- a/lab_data_mining_techniques.ipynb
+++ b/lab_data_mining_techniques.ipynb
@@ -415,12 +415,59 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 9. Short Tasks for Students\n",
+        "## 9. Variant Tasks for 10 Students\n",
         "\n",
-        "1. Change `n_clusters` in K-Means to 2 and 4. How does ARI change?\n",
-        "2. Try `max_depth=2` and `max_depth=8` for the tree. What changes in interpretability?\n",
-        "3. Add one more metric (e.g., macro F1) for comparing Gini vs Entropy.\n",
-        "4. Increase missingness from 10% to 25%. Which imputer is most stable?\n"
+        "Assign one variant to each student. Every variant includes a few tasks to complete.\n",
+        "\n",
+        "### Variant 1\n",
+        "1. Run K-Means with `n_clusters=2`, `3`, and `4`.\n",
+        "2. Compare ARI values in a small table.\n",
+        "3. Explain which `k` works best and why.\n",
+        "\n",
+        "### Variant 2\n",
+        "1. Keep `k=3` and test K-Means with and without `StandardScaler`.\n",
+        "2. Compare ARI and PCA cluster plots.\n",
+        "3. Write a short conclusion about scaling impact.\n",
+        "\n",
+        "### Variant 3\n",
+        "1. Build decision trees with `max_depth=2`, `4`, and `8` using `criterion='gini'`.\n",
+        "2. Compare train/test accuracy in one plot.\n",
+        "3. Explain where overfitting starts.\n",
+        "\n",
+        "### Variant 4\n",
+        "1. Build decision trees with `criterion='gini'` and `criterion='entropy'` at `max_depth=4`.\n",
+        "2. Compare confusion matrices and macro F1.\n",
+        "3. Decide which criterion is better on this dataset.\n",
+        "\n",
+        "### Variant 5\n",
+        "1. Simulate missingness at `10%` and `25%`.\n",
+        "2. Compare `SimpleImputer(mean)` and `SimpleImputer(median)`.\n",
+        "3. Report which method is more stable as missingness increases.\n",
+        "\n",
+        "### Variant 6\n",
+        "1. Simulate missingness at `15%`.\n",
+        "2. Compare `SimpleImputer(most_frequent)` vs `KNNImputer`.\n",
+        "3. Evaluate both using decision-tree test accuracy.\n",
+        "\n",
+        "### Variant 7\n",
+        "1. After imputation, compare feature distributions for two features (not only `flavanoids`).\n",
+        "2. Show KDE plots for original vs imputed data.\n",
+        "3. Identify which feature is most sensitive to imputation choice.\n",
+        "\n",
+        "### Variant 8\n",
+        "1. Train an entropy tree (`max_depth=4`).\n",
+        "2. Extract top-5 most important features.\n",
+        "3. Remove the top-1 feature, retrain, and compare accuracy.\n",
+        "\n",
+        "### Variant 9\n",
+        "1. Add 5-fold cross-validation for decision trees (`gini` and `entropy`).\n",
+        "2. Report mean and std accuracy for each criterion.\n",
+        "3. Compare CV results with the single train/test split.\n",
+        "\n",
+        "### Variant 10\n",
+        "1. Create one final comparison table with the best result from clustering, tree tuning, and imputation.\n",
+        "2. Select your recommended pipeline for this dataset.\n",
+        "3. Provide a 5-7 sentence final summary for a non-technical audience.\n"
       ]
     }
   ],
