Remove ARI references to align lab with lecture scope

--- a/lab_data_mining_techniques.ipynb
+++ b/lab_data_mining_techniques.ipynb
@@ -45,7 +45,6 @@
         "    accuracy_score,\n",
         "    confusion_matrix,\n",
         "    ConfusionMatrixDisplay,\n",
-        "    adjusted_rand_score,\n",
         "    classification_report,\n",
         ")\n",
         "\n",
@@ -147,8 +146,9 @@
         "pca = PCA(n_components=2, random_state=RANDOM_STATE)\n",
         "X_pca = pca.fit_transform(X_scaled)\n",
         "\n",
-        "ari = adjusted_rand_score(y, cluster_labels)\n",
-        "print(f\"Adjusted Rand Index (clusters vs true classes): {ari:.3f}\")\n"
+        "cluster_counts = pd.Series(cluster_labels).value_counts().sort_index()\n",
+        "print(\"Cluster sizes:\")\n",
+        "print(cluster_counts.to_string())\n"
       ]
     },
     {
@@ -421,12 +421,12 @@
         "\n",
         "### Variant 1\n",
         "1. Run K-Means with `n_clusters=2`, `3`, and `4`.\n",
-        "2. Compare ARI values in a small table.\n",
+        "2. Compare cluster sizes and PCA scatter plots in a small table/figure.\n",
         "3. Explain which `k` works best and why.\n",
         "\n",
         "### Variant 2\n",
         "1. Keep `k=3` and test K-Means with and without `StandardScaler`.\n",
-        "2. Compare ARI and PCA cluster plots.\n",
+        "2. Compare PCA cluster plots and cluster separation quality.\n",
         "3. Write a short conclusion about scaling impact.\n",
         "\n",
         "### Variant 3\n",
