Switch lab to Iris dataset and add output analysis notes

--- a/lab_data_mining_techniques.ipynb
+++ b/lab_data_mining_techniques.ipynb
@@ -34,7 +34,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "from sklearn.datasets import load_wine\n",
+        "from sklearn.datasets import load_iris\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.cluster import KMeans\n",
@@ -58,7 +58,7 @@
       "source": [
         "## 2. Load Open-Source Dataset\n",
         "\n",
-        "We use the **Wine** dataset from scikit-learn (originally from UCI ML Repository).\n"
+        "We use the **Iris** dataset from scikit-learn (originally from UCI ML Repository).\n"
       ]
     },
     {
@@ -67,13 +67,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "wine = load_wine(as_frame=True)\n",
-        "df = wine.frame.copy()\n",
-        "df[\"target_name\"] = df[\"target\"].map(lambda x: wine.target_names[x])\n",
+        "iris = load_iris(as_frame=True)\n",
+        "df = iris.frame.copy()\n",
+        "df[\"target_name\"] = df[\"target\"].map(lambda x: iris.target_names[x])\n",
         "\n",
         "print(\"Shape:\", df.shape)\n",
-        "print(\"Classes:\", list(wine.target_names))\n",
+        "print(\"Classes:\", list(iris.target_names))\n",
         "df.head()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- The dataset has `150` rows and `6` columns (`4` numeric features, `target`, and `target_name`).\n",
+        "- There are 3 classes (`setosa`, `versicolor`, `virginica`), which keeps the lab easy to interpret.\n",
+        "- This is a good teaching dataset because it is small, clean, and visually separable in feature space.\n"
       ]
     },
     {
@@ -94,7 +104,7 @@
         "# Class distribution\n",
         "sns.countplot(data=df, x=\"target_name\", hue=\"target_name\", palette=\"Set2\", ax=axes[0], legend=False)\n",
         "axes[0].set_title(\"Class Distribution\")\n",
-        "axes[0].set_xlabel(\"Wine class\")\n",
+        "axes[0].set_xlabel(\"Iris class\")\n",
         "axes[0].set_ylabel(\"Count\")\n",
         "\n",
         "# Correlation heatmap\n",
@@ -107,15 +117,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- Class counts are balanced, so model comparisons are not biased by class imbalance.\n",
+        "- Correlation heatmap typically shows strong positive correlation between petal length and petal width.\n",
+        "- This supports later results where petal-based features dominate tree splits.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "selected_features = [\"alcohol\", \"malic_acid\", \"flavanoids\", \"color_intensity\", \"target_name\"]\n",
+        "selected_features = [\n",
+        "    \"sepal length (cm)\",\n",
+        "    \"sepal width (cm)\",\n",
+        "    \"petal length (cm)\",\n",
+        "    \"petal width (cm)\",\n",
+        "    \"target_name\",\n",
+        "]\n",
         "sns.pairplot(df[selected_features], hue=\"target_name\", corner=True, diag_kind=\"kde\")\n",
         "plt.suptitle(\"Feature Relationships by Class\", y=1.02)\n",
         "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- Pairplot shows `setosa` as clearly separated from the other two classes.\n",
+        "- `versicolor` and `virginica` overlap partially, which explains most classification mistakes later.\n",
+        "- Petal features provide clearer class boundaries than sepal features.\n"
       ]
     },
     {
@@ -152,6 +188,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- K-Means produced cluster sizes `53`, `50`, and `47`.\n",
+        "- These are close to balanced and close to the expected 50-per-class structure.\n",
+        "- The clustering signal is strong enough for a simple unsupervised method.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -171,6 +217,16 @@
         "\n",
         "plt.tight_layout()\n",
         "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- In PCA space, one cluster aligns clearly with `setosa`.\n",
+        "- The remaining two classes/clusters show partial overlap, which is expected for Iris.\n",
+        "- Visual clustering quality is good for demonstration, even without labels in training.\n"
       ]
     },
     {
@@ -211,6 +267,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- Both criteria gave the same test accuracy: `0.921`.\n",
+        "- For this dataset/split, `gini` and `entropy` are effectively equivalent.\n",
+        "- This lets students focus on interpretability and depth tuning rather than criterion choice alone.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -228,7 +294,17 @@
         "plt.show()\n",
         "\n",
         "print(\"Classification report (Entropy):\")\n",
-        "print(classification_report(y_test, preds_entropy, target_names=wine.target_names))\n"
+        "print(classification_report(y_test, preds_entropy, target_names=iris.target_names))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- `setosa` is classified perfectly (precision/recall/F1 = `1.00`).\n",
+        "- Most errors happen between `versicolor` and `virginica`, matching the pairplot overlap.\n",
+        "- Macro F1 is about `0.92`, indicating strong but not perfect multiclass performance.\n"
       ]
     },
     {
@@ -241,13 +317,23 @@
         "plot_tree(\n",
         "    model_entropy,\n",
         "    feature_names=X.columns,\n",
-        "    class_names=wine.target_names,\n",
+        "    class_names=iris.target_names,\n",
         "    filled=True,\n",
         "    rounded=True,\n",
         "    fontsize=9,\n",
         ")\n",
         "plt.title(\"Decision Tree Visualization (Entropy, max_depth=4)\")\n",
         "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- The learned tree is shallow and interpretable at `max_depth=4`.\n",
+        "- Top decision nodes rely on petal features, which matches EDA and feature-importance outputs.\n",
+        "- This visualization is useful for explaining rule-based classification logic.\n"
       ]
     },
     {
@@ -298,6 +384,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "#### Output Analysis\n",
+        "- Test accuracy peaks around depth `2`/`4` (`~0.921`) and then drops/plateaus near `0.895`.\n",
+        "- Training accuracy reaches `1.0` at larger depths, indicating overfitting.\n",
+        "- A moderate depth is the best tradeoff between generalization and interpretability.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## 7. Feature Importance\n"
       ]
     },
@@ -317,6 +413,16 @@
         "plt.show()\n",
         "\n",
         "importance.head(10)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- `petal length (cm)` dominates importance (`~0.909`), with `petal width (cm)` second (`~0.079`).\n",
+        "- Sepal features contribute little; `sepal width` is near zero.\n",
+        "- This matches the visual separability seen in earlier EDA.\n"
       ]
     },
     {
@@ -347,6 +453,16 @@
         "print(f\"Missing cells: {missing_total} ({missing_pct:.1f}%)\")\n",
         "\n",
         "X_missing.isna().mean().sort_values(ascending=False)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- The run generated `55` missing cells (`9.2%`), close to the target 10%.\n",
+        "- Missingness is random but not perfectly uniform by column (expected with finite samples).\n",
+        "- This setup is suitable for comparing imputation methods under controlled noise.\n"
       ]
     },
     {
@@ -389,12 +505,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- `mean`, `median`, and `knn` produced the same accuracy (`0.8947`) in this run.\n",
+        "- `most_frequent` performed worse (`0.8684`), which is typical for continuous features.\n",
+        "- All imputers removed missing values completely (`0` remaining missing cells).\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "feature = \"flavanoids\"\n",
+        "feature = \"petal length (cm)\"\n",
         "feature_idx = X.columns.get_loc(feature)\n",
         "\n",
         "plt.figure(figsize=(10, 5))\n",
@@ -409,6 +535,16 @@
         "plt.ylabel(\"Density\")\n",
         "plt.legend()\n",
         "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Output Analysis\n",
+        "- Imputation changes the feature distribution in different ways.\n",
+        "- `mean`/`median` tend to shrink variance, while `knn` often preserves local structure better.\n",
+        "- Distribution checks are important because equal accuracy can still hide data-distortion effects.\n"
       ]
     },
     {
