Expand output analysis notes and keep executed notebook outputs

--- a/lab_data_mining_techniques.ipynb
+++ b/lab_data_mining_techniques.ipynb
@@ -31,10 +31,10 @@
    "id": "d54a8980",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:24.805335Z",
-     "iopub.status.busy": "2026-02-19T15:45:24.805149Z",
-     "iopub.status.idle": "2026-02-19T15:45:26.211613Z",
-     "shell.execute_reply": "2026-02-19T15:45:26.211178Z"
+     "iopub.execute_input": "2026-02-19T15:52:51.750821Z",
+     "iopub.status.busy": "2026-02-19T15:52:51.750427Z",
+     "iopub.status.idle": "2026-02-19T15:52:53.128512Z",
+     "shell.execute_reply": "2026-02-19T15:52:53.128010Z"
     }
    },
    "outputs": [],
@@ -78,10 +78,10 @@
    "id": "bb4aa564",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:26.212994Z",
-     "iopub.status.busy": "2026-02-19T15:45:26.212867Z",
-     "iopub.status.idle": "2026-02-19T15:45:26.223083Z",
-     "shell.execute_reply": "2026-02-19T15:45:26.222780Z"
+     "iopub.execute_input": "2026-02-19T15:52:53.129839Z",
+     "iopub.status.busy": "2026-02-19T15:52:53.129699Z",
+     "iopub.status.idle": "2026-02-19T15:52:53.140762Z",
+     "shell.execute_reply": "2026-02-19T15:52:53.140304Z"
     }
    },
    "outputs": [
@@ -209,9 +209,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- The dataset has `150` rows and `6` columns (`4` numeric features, `target`, and `target_name`).\n",
-    "- There are 3 classes (`setosa`, `versicolor`, `virginica`), which keeps the lab easy to interpret.\n",
-    "- This is a good teaching dataset because it is small, clean, and visually separable in feature space.\n"
+    "- The loaded Iris table has `150` rows and `6` columns: 4 numeric features plus `target` and `target_name`.\n",
+    "- Classes are balanced (`setosa`, `versicolor`, `virginica` with 50 samples each), so accuracy is interpretable without class-weight corrections.\n",
+    "- Because the dataset is small and clean, it is ideal for teaching how each modeling step changes results.\n"
    ]
   },
   {
@@ -228,10 +228,10 @@
    "id": "4cd14126",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:26.224276Z",
-     "iopub.status.busy": "2026-02-19T15:45:26.224208Z",
-     "iopub.status.idle": "2026-02-19T15:45:26.342585Z",
-     "shell.execute_reply": "2026-02-19T15:45:26.342145Z"
+     "iopub.execute_input": "2026-02-19T15:52:53.141858Z",
+     "iopub.status.busy": "2026-02-19T15:52:53.141787Z",
+     "iopub.status.idle": "2026-02-19T15:52:53.258023Z",
+     "shell.execute_reply": "2026-02-19T15:52:53.257636Z"
     }
    },
    "outputs": [
@@ -270,9 +270,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- Class counts are balanced, so model comparisons are not biased by class imbalance.\n",
-    "- Correlation heatmap typically shows strong positive correlation between petal length and petal width.\n",
-    "- This supports later results where petal-based features dominate tree splits.\n"
+    "- Class distribution is balanced, so no class dominates the training signal.\n",
+    "- The heatmap shows strong positive correlation between `petal length` and `petal width`.\n",
+    "- Sepal features are less strongly separated than petal features, which anticipates later tree importance scores.\n"
    ]
   },
   {
@@ -281,10 +281,10 @@
    "id": "f17130d5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:26.343733Z",
-     "iopub.status.busy": "2026-02-19T15:45:26.343650Z",
-     "iopub.status.idle": "2026-02-19T15:45:26.721772Z",
-     "shell.execute_reply": "2026-02-19T15:45:26.721276Z"
+     "iopub.execute_input": "2026-02-19T15:52:53.259104Z",
+     "iopub.status.busy": "2026-02-19T15:52:53.259033Z",
+     "iopub.status.idle": "2026-02-19T15:52:53.624241Z",
+     "shell.execute_reply": "2026-02-19T15:52:53.623812Z"
     }
    },
    "outputs": [
@@ -318,9 +318,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- Pairplot shows `setosa` as clearly separated from the other two classes.\n",
-    "- `versicolor` and `virginica` overlap partially, which explains most classification mistakes later.\n",
-    "- Petal features provide clearer class boundaries than sepal features.\n"
+    "- Pairplots show `setosa` as clearly separated from the other two classes.\n",
+    "- `versicolor` and `virginica` overlap in petal-space boundaries, so some confusion between them is expected.\n",
+    "- This visual overlap explains why final metrics are high but not perfect.\n"
    ]
   },
   {
@@ -339,10 +339,10 @@
    "id": "d973b1d1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:26.722936Z",
-     "iopub.status.busy": "2026-02-19T15:45:26.722862Z",
-     "iopub.status.idle": "2026-02-19T15:45:26.754025Z",
-     "shell.execute_reply": "2026-02-19T15:45:26.753359Z"
+     "iopub.execute_input": "2026-02-19T15:52:53.625271Z",
+     "iopub.status.busy": "2026-02-19T15:52:53.625204Z",
+     "iopub.status.idle": "2026-02-19T15:52:53.658108Z",
+     "shell.execute_reply": "2026-02-19T15:52:53.657549Z"
     }
    },
    "outputs": [
@@ -382,9 +382,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- K-Means produced cluster sizes `53`, `50`, and `47`.\n",
-    "- These are close to balanced and close to the expected 50-per-class structure.\n",
-    "- The clustering signal is strong enough for a simple unsupervised method.\n"
+    "- K-Means with `k=3` produced clusters of sizes `53`, `50`, and `47`.\n",
+    "- The split is close to the true class balance (50 each), which indicates stable clustering structure.\n",
+    "- Slight size mismatch is normal because K-Means optimizes distance, not true labels.\n"
    ]
   },
   {
@@ -393,10 +393,10 @@
    "id": "3f378e21",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:26.755967Z",
-     "iopub.status.busy": "2026-02-19T15:45:26.755858Z",
-     "iopub.status.idle": "2026-02-19T15:45:26.861708Z",
-     "shell.execute_reply": "2026-02-19T15:45:26.861236Z"
+     "iopub.execute_input": "2026-02-19T15:52:53.659697Z",
+     "iopub.status.busy": "2026-02-19T15:52:53.659583Z",
+     "iopub.status.idle": "2026-02-19T15:52:53.765142Z",
+     "shell.execute_reply": "2026-02-19T15:52:53.764590Z"
     }
    },
    "outputs": [
@@ -434,9 +434,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- In PCA space, one cluster aligns clearly with `setosa`.\n",
-    "- The remaining two classes/clusters show partial overlap, which is expected for Iris.\n",
-    "- Visual clustering quality is good for demonstration, even without labels in training.\n"
+    "- In PCA projection, one cluster corresponds almost cleanly to `setosa`.\n",
+    "- The remaining points for `versicolor`/`virginica` partially overlap, matching the pairplot pattern.\n",
+    "- The result is strong enough to demonstrate unsupervised structure discovery on a simple dataset.\n"
    ]
   },
   {
@@ -455,10 +455,10 @@
    "id": "176728d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:26.863399Z",
-     "iopub.status.busy": "2026-02-19T15:45:26.863281Z",
-     "iopub.status.idle": "2026-02-19T15:45:26.870810Z",
-     "shell.execute_reply": "2026-02-19T15:45:26.870165Z"
+     "iopub.execute_input": "2026-02-19T15:52:53.766706Z",
+     "iopub.status.busy": "2026-02-19T15:52:53.766596Z",
+     "iopub.status.idle": "2026-02-19T15:52:53.773923Z",
+     "shell.execute_reply": "2026-02-19T15:52:53.773524Z"
     }
    },
    "outputs": [
@@ -500,9 +500,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- Both criteria gave the same test accuracy: `0.921`.\n",
-    "- For this dataset/split, `gini` and `entropy` are effectively equivalent.\n",
-    "- This lets students focus on interpretability and depth tuning rather than criterion choice alone.\n"
+    "- Test accuracy is identical for both criteria: `Gini = 0.921`, `Entropy = 0.921`.\n",
+    "- On this train/test split, criterion choice has minimal impact compared with depth and feature space.\n",
+    "- This is useful pedagogically: students can compare criteria while seeing similar predictive quality.\n"
    ]
   },
   {
@@ -511,10 +511,10 @@
    "id": "28917622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:26.872316Z",
-     "iopub.status.busy": "2026-02-19T15:45:26.872220Z",
-     "iopub.status.idle": "2026-02-19T15:45:26.938396Z",
-     "shell.execute_reply": "2026-02-19T15:45:26.937863Z"
+     "iopub.execute_input": "2026-02-19T15:52:53.775327Z",
+     "iopub.status.busy": "2026-02-19T15:52:53.775251Z",
+     "iopub.status.idle": "2026-02-19T15:52:53.843458Z",
+     "shell.execute_reply": "2026-02-19T15:52:53.842911Z"
     }
    },
    "outputs": [
@@ -568,9 +568,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- `setosa` is classified perfectly (precision/recall/F1 = `1.00`).\n",
-    "- Most errors happen between `versicolor` and `virginica`, matching the pairplot overlap.\n",
-    "- Macro F1 is about `0.92`, indicating strong but not perfect multiclass performance.\n"
+    "- Confusion matrices for Gini and Entropy are identical: `[[12,0,0],[0,12,1],[0,2,11]]`.\n",
+    "- `setosa` is perfectly classified (`12/12`); errors are only between `versicolor` and `virginica`.\n",
+    "- Entropy report shows macro F1 around `0.92`, confirming strong but not perfect multiclass performance.\n"
    ]
   },
   {
@@ -579,10 +579,10 @@
    "id": "4e2429bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:26.940063Z",
-     "iopub.status.busy": "2026-02-19T15:45:26.939965Z",
-     "iopub.status.idle": "2026-02-19T15:45:27.048581Z",
-     "shell.execute_reply": "2026-02-19T15:45:27.048246Z"
+     "iopub.execute_input": "2026-02-19T15:52:53.844872Z",
+     "iopub.status.busy": "2026-02-19T15:52:53.844778Z",
+     "iopub.status.idle": "2026-02-19T15:52:53.948155Z",
+     "shell.execute_reply": "2026-02-19T15:52:53.947747Z"
     }
    },
    "outputs": [
@@ -617,9 +617,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- The learned tree is shallow and interpretable at `max_depth=4`.\n",
-    "- Top decision nodes rely on petal features, which matches EDA and feature-importance outputs.\n",
-    "- This visualization is useful for explaining rule-based classification logic.\n"
+    "- The tree is readable at `max_depth=4`, so each split can be discussed in class as a rule.\n",
+    "- Top splits are driven by petal features, consistent with EDA and feature-importance ranking.\n",
+    "- This makes the model suitable for explaining interpretable classification decisions.\n"
    ]
   },
   {
@@ -638,10 +638,10 @@
    "id": "398ca91b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:27.049763Z",
-     "iopub.status.busy": "2026-02-19T15:45:27.049692Z",
-     "iopub.status.idle": "2026-02-19T15:45:27.118197Z",
-     "shell.execute_reply": "2026-02-19T15:45:27.117798Z"
+     "iopub.execute_input": "2026-02-19T15:52:53.949302Z",
+     "iopub.status.busy": "2026-02-19T15:52:53.949216Z",
+     "iopub.status.idle": "2026-02-19T15:52:54.016893Z",
+     "shell.execute_reply": "2026-02-19T15:52:54.016503Z"
     }
    },
    "outputs": [
@@ -692,9 +692,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- Test accuracy peaks around depth `2`/`4` (`~0.921`) and then drops/plateaus near `0.895`.\n",
-    "- Training accuracy reaches `1.0` at larger depths, indicating overfitting.\n",
-    "- A moderate depth is the best tradeoff between generalization and interpretability.\n"
+    "- Depth curves show peak test accuracy near depths `2` and `4` (`~0.921`).\n",
+    "- From depth `6+`, train accuracy reaches `1.0` while test stays around `0.895`.\n",
+    "- That gap is a clear overfitting signal: deeper trees memorize training details without improving generalization.\n"
    ]
   },
   {
@@ -711,10 +711,10 @@
    "id": "b2d000a0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:27.119380Z",
-     "iopub.status.busy": "2026-02-19T15:45:27.119304Z",
-     "iopub.status.idle": "2026-02-19T15:45:27.160685Z",
-     "shell.execute_reply": "2026-02-19T15:45:27.160265Z"
+     "iopub.execute_input": "2026-02-19T15:52:54.017986Z",
+     "iopub.status.busy": "2026-02-19T15:52:54.017921Z",
+     "iopub.status.idle": "2026-02-19T15:52:54.058472Z",
+     "shell.execute_reply": "2026-02-19T15:52:54.058065Z"
     }
    },
    "outputs": [
@@ -722,7 +722,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cn/4_gky4xj72v72pn40z8_0vh80000gn/T/ipykernel_30400/1232696998.py:4: FutureWarning: \n",
+      "/var/folders/cn/4_gky4xj72v72pn40z8_0vh80000gn/T/ipykernel_30601/1232696998.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -773,9 +773,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- `petal length (cm)` dominates importance (`~0.909`), with `petal width (cm)` second (`~0.079`).\n",
-    "- Sepal features contribute little; `sepal width` is near zero.\n",
-    "- This matches the visual separability seen in earlier EDA.\n"
+    "- Feature importances are highly concentrated in petals: `petal length ~0.909`, `petal width ~0.079`.\n",
+    "- `sepal length ~0.011` and `sepal width ~0.000` contribute little to this tree.\n",
+    "- This quantitatively confirms earlier visual observations from EDA.\n"
    ]
   },
   {
@@ -794,10 +794,10 @@
    "id": "67041bb0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:27.161859Z",
-     "iopub.status.busy": "2026-02-19T15:45:27.161780Z",
-     "iopub.status.idle": "2026-02-19T15:45:27.165030Z",
-     "shell.execute_reply": "2026-02-19T15:45:27.164633Z"
+     "iopub.execute_input": "2026-02-19T15:52:54.059496Z",
+     "iopub.status.busy": "2026-02-19T15:52:54.059412Z",
+     "iopub.status.idle": "2026-02-19T15:52:54.062533Z",
+     "shell.execute_reply": "2026-02-19T15:52:54.062222Z"
     }
    },
    "outputs": [
@@ -845,9 +845,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- The run generated `55` missing cells (`9.2%`), close to the target 10%.\n",
-    "- Missingness is random but not perfectly uniform by column (expected with finite samples).\n",
-    "- This setup is suitable for comparing imputation methods under controlled noise.\n"
+    "- Missing-value simulation produced `55` missing cells (`9.2%`), close to the intended 10%.\n",
+    "- Missingness rates vary by feature (`petal length` highest in this run), which is expected under random masking.\n",
+    "- This controlled setup is appropriate for fair imputer comparison.\n"
    ]
   },
   {
@@ -856,10 +856,10 @@
    "id": "f1b98e34",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:27.166011Z",
-     "iopub.status.busy": "2026-02-19T15:45:27.165943Z",
-     "iopub.status.idle": "2026-02-19T15:45:27.179526Z",
-     "shell.execute_reply": "2026-02-19T15:45:27.179061Z"
+     "iopub.execute_input": "2026-02-19T15:52:54.063600Z",
+     "iopub.status.busy": "2026-02-19T15:52:54.063539Z",
+     "iopub.status.idle": "2026-02-19T15:52:54.076363Z",
+     "shell.execute_reply": "2026-02-19T15:52:54.076045Z"
     }
    },
    "outputs": [
@@ -976,9 +976,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- `mean`, `median`, and `knn` produced the same accuracy (`0.8947`) in this run.\n",
-    "- `most_frequent` performed worse (`0.8684`), which is typical for continuous features.\n",
-    "- All imputers removed missing values completely (`0` remaining missing cells).\n"
+    "- Imputation comparison (test accuracy): `mean=0.8947`, `median=0.8947`, `knn=0.8947`, `most_frequent=0.8684`.\n",
+    "- All methods reduced missing values to zero in train and test arrays.\n",
+    "- For continuous Iris features, `most_frequent` is weaker, while mean/median/KNN are similarly robust.\n"
    ]
   },
   {
@@ -987,10 +987,10 @@
    "id": "d074abd2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-19T15:45:27.180668Z",
-     "iopub.status.busy": "2026-02-19T15:45:27.180599Z",
-     "iopub.status.idle": "2026-02-19T15:45:27.239681Z",
-     "shell.execute_reply": "2026-02-19T15:45:27.239257Z"
+     "iopub.execute_input": "2026-02-19T15:52:54.077397Z",
+     "iopub.status.busy": "2026-02-19T15:52:54.077334Z",
+     "iopub.status.idle": "2026-02-19T15:52:54.134965Z",
+     "shell.execute_reply": "2026-02-19T15:52:54.134627Z"
     }
    },
    "outputs": [
@@ -1029,9 +1029,9 @@
    "metadata": {},
    "source": [
     "#### Output Analysis\n",
-    "- Imputation changes the feature distribution in different ways.\n",
-    "- `mean`/`median` tend to shrink variance, while `knn` often preserves local structure better.\n",
-    "- Distribution checks are important because equal accuracy can still hide data-distortion effects.\n"
+    "- Distribution overlays show each imputer changes `petal length` shape differently.\n",
+    "- Mean/median tend to pull values toward central tendency; KNN usually preserves local structure better.\n",
+    "- Even when accuracy is similar, checking distribution drift is important for trustworthy preprocessing.\n"
    ]
   },
   {
